# SolarSim

./: .gitignore  LICENSE  README.md  help.html  index.html  pyproject.toml
assets/: help-DvhHSlPm.css  katex-BrEcCoaT.css  main-Bt219ssg.css  main-pPgx2cKd.js  simulator-DTOPr3Ae.js  simulator-DWGBMrgC.css
configs/mocap/: leap_csv.yaml  simulated_csv.yaml
configs/run/: baseline.yaml
configs/scene/: baseline_circular_6000K_40klx.yaml  cct_circular_2400K_40klx.yaml  cct_circular_4000K_40klx.yaml  cct_circular_6000K_40klx.yaml  geometry_rectangular_6000K_40klx.yaml  intensity_circular_6000K_0p4klx.yaml  intensity_circular_6000K_15klx.yaml  intensity_circular_6000K_30klx.yaml  intensity_circular_6000K_40klx.yaml  multi_circular_rectangular_d60cm.yaml  multi_circular_rectangular_d70cm.yaml  multi_dual_circular_d110cm.yaml  multi_dual_circular_d50cm.yaml
data/: README.md
data/baseline_15participants/: README.md
data/cct_circular_2400K_40klx/: Circle__Synchronized.csv  One__Synchronized.csv  Square__Synchronized.csv  Three__Synchronized.csv  Triangle__Synchronized.csv  Two__Synchronized.csv
data/cct_circular_4000K_40klx/: Circle__Synchronized.csv  One__Synchronized.csv  Square__Synchronized.csv  Three__Synchronized.csv  Triangle__Synchronized.csv  Two__Synchronized.csv
data/cct_circular_6000K_40klx/: Circle__Synchronized.csv  One__Synchronized.csv
data/geometry_rectangular_6000K_40klx/: Circle__Synchronized.csv  Free Move__Synchronized.csv  (+6 more)
pysolarsim/: README.md  __init__.py  calibrate.py  cli.py  convert.py  engine.py  kernel.py  metrics.py  motion.py  pipeline.py  scene.py
simulator/: index.html
tools/: build_scenes.py  run_fidelity.py
(+267 files in other folders)
