[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pysolarsim"
version = "1.0.0"
description = "Physics-based simulation of wearable solar harvester signals for motion sensing"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yasien Ghalwash", email = "yasien.ghalwash@qut.edu.au" },
    { name = "Abdelwahed Khamis" },
    { name = "Sara Khalifa" },
    { name = "Moid Sandhu" },
    { name = "Raja Jurdak" },
]
keywords = [
    "solar",
    "energy-harvesting",
    "wearable",
    "simulation",
    "radiometry",
    "photovoltaic",
    "motion-sensing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/yasienghalwash/SolarSim"
Repository = "https://github.com/yasienghalwash/SolarSim"

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
test = ["pytest>=7.0"]

[project.scripts]
pysolarsim = "pysolarsim.cli:main"

[tool.setuptools]
packages = ["pysolarsim", "pysolarsim.io"]

[tool.pytest.ini_options]
testpaths = ["pysolarsim/tests"]
